deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: microservice
  name: microservice
spec:
  selector:
    matchLabels:
      app: microservice
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
        - name: microservice
          image: quay.io/lrochette/microservice:4001e7c2e3a5916a1fe371bcc65d6a7f8670da20
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
