rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: microservice
spec:
  replicas: 4
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: microservice
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
        - image: quay.io/lrochette/microservice:36331bcbab22f83c66ee8faaba6411a072770fb6
          name: microservice
          ports:
            - containerPort: 3000
  minReadySeconds: 30
  strategy:
    canary:
      analysis:
        templates:
        - templateName: pass-always
#         - templateName: mixed-tests
        startingStep: 1
      steps:
        - setWeight: 25
        - pause: {duration: 1m}
