service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservice
  name: microservice
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: microservice
  type: LoadBalancer
