ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice
spec:
  ingressClassName: nginx
  rules:
    - host: lrcsdp.support.cf-cd.com
      http:
        paths:
          - path: /microservice
            backend:
              service:
                name: microservice
                port:
                  number: 80
            pathType: ImplementationSpecific
